<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:titleEnabled="false"
            app:expandedTitleGravity="bottom|left"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                app:layout_collapseMode="parallax"
                android:layout_height="256dp"
                android:fitsSystemWindows="true">

                <ImageView
                    android:id="@+id/image_poster"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/image_poster_desc"
                    android:src="@mipmap/ic_launcher" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_scrim" />

                <ImageView
                    android:id="@+id/image_rating"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/image_rate_desc"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/text_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="44dp"
                    android:gravity="center"
                    android:text="@string/text_rate_sample" />
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="21sp"
                    android:fontFamily="sans-serif-condensed" />
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_movie_detail" />
</android.support.design.widget.CoordinatorLayout>